Use LeastUnacked to calculate the packet number length instead of GetLeastPacketAwaitedByPeer.  Protected by default enabled FLAGS_quic_least_unacked_packet_number_length.

Merge internal change: 128727157
Merge internal change: 129995365

BUG=636998

Review-Url: https://codereview.chromium.org/2237163002
Cr-Commit-Position: refs/heads/master@{#411541}

Former-commit-id: 46da07b554cec9b784fbc08bc0899d9d39fc8d30