net/quic/core/quic_sent_packet_manager.cc
@@ -986,6 +986,7 @@ QuicPacketNumber QuicSentPacketManager::GetLargestSentPacket(QuicPathId) const {
   return unacked_packets_.largest_sent_packet();
 }
 
+// Remove this method when deprecating QUIC_VERSION_33.
 QuicPacketNumber QuicSentPacketManager::GetLeastPacketAwaitedByPeer(
     QuicPathId) const {
   return least_packet_awaited_by_peer_;
